# jpeg-rs

./: Cargo.toml  sonar-project.properties
.github/workflows/: cicd-pipeline.yml
jpeg-cli/: Cargo.toml
jpeg-cli/src/: lib.rs  main.rs
jpeg-cli/tests/: cli.rs
jpeg-core/: Cargo.toml
jpeg-core/src/: bitstream.rs  block.rs  color.rs  dct.rs  encoder.rs  error.rs  lib.rs  marker.rs  quantize.rs  sampling.rs  types.rs
jpeg-core/src/entropy/: huffman_encoder.rs  huffman_table.rs  mod.rs
jpeg-core/tests/: integration.rs
jpeg-io/: Cargo.toml
jpeg-io/src/: error.rs  lib.rs  ppm.rs
