[package]
name = "jpeg-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line JPEG encoder"

[lib]
name = "jpeg_cli"
path = "src/lib.rs"

[[bin]]
name = "jpeg-encode"
path = "src/main.rs"

[dependencies]
jpeg-core = { path = "../jpeg-core" }
jpeg-io = { path = "../jpeg-io" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"